Closed Bug 1778608 Opened 2 years ago Closed 2 years ago

Fix FontFaceSetWorkerImpl destruction off main thread

Categories

(Core :: Layout: Text and Fonts, defect, P3)

defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
firefox104 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

References

Details

Attachments

(1 file)

No description provided.

The loaders need to be destroyed on the main thread. Assertions for
gfxUserFontSet and gfxFontFamily need to be updated for workers.

Depends on D151342

Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/921a5cd15b42
Fix FontFaceSetWorkerImpl destruction off main thread. r=emilio
Flags: needinfo?(aosmond)

Fixed by the updates in bug 1778681 and bug 1777287.

Flags: needinfo?(aosmond)
Pushed by aosmond@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5b9e14767924
Fix FontFaceSetWorkerImpl destruction off main thread. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: