Bug 1778608 - Fix FontFaceSetWorkerImpl destruction off main thread. r=emilio

The loaders need to be destroyed on the main thread. Assertions for
gfxUserFontSet and gfxFontFamily need to be updated for workers.

Depends on D151342

Differential Revision: https://phabricator.services.mozilla.com/D151343